--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-	"name": "fila-node",
+	"name": "fila-keyva",
 	"author": "Paul Gordon",
-	"description": "Node.js backend for Fila",
+	"description": "Keyva.js backend for Fila",
 	"version": "1.0.0",
-	"main": "fila-node.js",
-	"scripts": {
-		"bundle": "tsc -p tsconfig.release.json && terser ./+build/fila-node.debug.js > ./+build/fila-node.min.js"
-	},
+	"main": "fila-keyva.js",
 	"license": "MIT",
-	"devDependencies": {
-		"@types/node": "^18.11.9"
+	"scripts": {
+		"bundle": "tsc -p tsconfig.release.json && terser ./+build/fila-keyva.debug.js > ./+build/fila-keyva.min.js"
 	}
 }
