--- a/tsconfig.release.json
+++ b/tsconfig.release.json
@@ -1,14 +1,14 @@
 {
 	"extends": "./tsconfig.json",
 	"compilerOptions": {
-		"outFile": "+build/fila-keyva.js",
+		"outFile": "+build/fila-keyva.js"
 	},
 	"exclude": [
 		"**/+build/**/*.ts",
-		"**/*.cover.ts",
+		"**/*.cover.ts"
 	],
 	"references": [
 		{ "path": "../Fila" },
-		{ "path": "../Keyva" },
+		{ "path": "../Keyva" }
 	]
 }
